2022-10-18  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha12 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha12: Seven Falls';git push
	git tag -a 5.1.1-alpha12 -m 'ncremap undup mpas no_stg_grd rnr_thr switches, mpassi add_fll, vrt_ntp: tpt, 1D OK, vrt_xtr add mth=zero,lnr; ncks add_fll trigger where sgs_frc=0.0';git push --tags

	* ncremap move/combine passing of --no_stagger to ncks to avoid double-setting it

	* ncremap move/combine passing of --rnr_thr to ncks to avoid double-setting it

	* ncremap set --add_fll to true for sea-ice models

	* ncremap add clause to cause --add_fll to set cells with sgs_frc == 0.0 to _FillValue

2022-10-13  Charlie Zender  <zender@uci.edu>

	* Add vertical extrapolation methods linear and zero

2022-10-12  Charlie Zender  <zender@uci.edu>

	* Vertically interpolate all variables whose names start with "tpt" with temperature method

	* ncremap allow vertical interpolation on single dimensional (vertical) files

2022-10-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha11 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha11: Tangentially Speaking';git push
	git tag -a 5.1.1-alpha11 -m 'all: stdin requires -o for fl_out; ncap2: stdin reorg';git push --tags

	* Re-organize ncap2 filename handling to treat stdin equivalent to positional in all cases

	* Check stdin for input filenames as last resort not first resort

	* ncks/ncrename/ncatted require -o for output file if stdin for	input (except for MFOs, for backward compatibility)

2022-10-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha10 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha10: Jinx Drives Solo';git push
	git tag -a 5.1.1-alpha10 -m 'ncremap nSnowLayers, sgs_frc prs, sgs_nrm prs, Chrysalis paths';git push --tags

	* ncremap add nSnowLayers dimension to pdq_opt for MPAS-SI

	* ncremap fix sgs_frc option handling that 5.1.0 broke for MPAS-SI, CICE

	* ncremap pass sgs_nrm for CICE and not others
